# MunchkinLogicSystem

./: ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  PLAN.md  README.md  ast_transformer.py  commands.py  demo.py  engine.py  example.shldn  knowledge_base.py  lexer.py  main.py  models.py  parser.py  pyproject.toml  repl.py  test_fix.shldn  test_new_functionality.py  test_string_parsing.py  unification.py
docs/: IMPLEMENTATION_ROADMAP.md  development_plan.md  development_plan_part2.md  development_plan_part3.md  technical_documentation.md  user_guide.md
examples/: complex_example.shldn  first.shldn  predicate_example.shldn  second.shldn  simple_example.shldn  situation1.shldn  situation2.shldn  situation3.shldn  third.shldn
src/: engine.py  lexer.py  parser.py
src/tests/: test_engine.py  test_lexer.py  test_lexer_parser.py
tests/: test_arithmetic.py  test_ast_transformer.py  test_commands.py  test_comparison_parsing.py  test_complete_example.py  test_engine.py  test_error_handling.py  test_example_parsing.py  test_full_example.py  test_kb.py  test_lexer.py  test_parser.py  test_problematic_axiom.py  test_repl.py  test_unification.py  test_unification_in_engine.py
Задания/: Практическая работа №1 ПСППР.docx  Практическая работа №2 ПСППР.docx  Практическая работа №3 ПСППР.docx  Практическая работа №4 ПСППР.docx
