[project]
name = "munchkinlogic"
version = "0.1.0"
description = "Логический язык программирования на основе исчисления высказываний"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
    "ruff>=0.14.7",
]

[project.scripts]
munchkin-logic = "main:main"
munchkin-demo = "demo:run_demo"

[tool.pytest.ini_options]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
pythonpath=["."]
